// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WITH STYLES TRACE LEVELS trace 1 NATIVE 1`] = `
<ReactAny
  style={
    Object {
      "backgroundColor": "gray",
      "margin": 10,
      "padding": 10,
    }
  }
>
  traceLevel=1
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 1 WEB 1`] = `
<ReactAny
  className="b a"
  style={
    Object {
      "margin": 10,
    }
  }
>
  traceLevel=1
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 2 NATIVE 1`] = `
<ReactAny
  style={
    Object {
      "backgroundColor": "gray",
      "margin": 10,
      "padding": 10,
    }
  }
  trace={
    Object {
      "backgroundColor": "gray /*TestComponent.sheet.root*/",
      "margin": "10 /*styleX*/",
      "padding": "10 /*classNameX*/",
    }
  }
>
  traceLevel=2
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 2 WEB 1`] = `
<ReactAny
  className="b a"
  style={
    Object {
      "margin": 10,
    }
  }
  trace={
    Array [
      ".b { padding:10px /*classNameX*/ }",
      ".a { background-color:gray /*TestComponent.sheet.root*/ }",
    ]
  }
>
  traceLevel=2
</ReactAny>
`;

exports[`WITH STYLES TRACE LEVELS trace 3 NATIVE 1`] = `
<TestComponent>
  <TestComponentCode>
    <ReactAny
      style={
        Object {
          "backgroundColor": "gray",
          "margin": 10,
          "padding": 10,
        }
      }
      trace={
        Object {
          "backgroundColor": "gray /*TestComponent.sheet.root*/",
          "margin": "10 /*styleX*/",
          "padding": "10 /*classNameX*/",
        }
      }
    >
      traceLevel=3
    </ReactAny>
  </TestComponentCode>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 3 WEB 1`] = `
<TestComponent>
  <TestComponentCode>
    <ReactAny
      className="b a"
      style={
        Object {
          "margin": 10,
        }
      }
      trace={
        Array [
          ".b { padding:10px /*classNameX*/ }",
          ".a { background-color:gray /*TestComponent.sheet.root*/ }",
        ]
      }
    >
      traceLevel=3
    </ReactAny>
  </TestComponentCode>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 4 NATIVE 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": 10,
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <TestComponentCode
    classNameX={
      Object {
        "list": Array [
          Object {
            "atomicArray": Array [
              "padding: 10 /*classNameX*/",
            ],
          },
        ],
        "name": ".",
      }
    }
    classes={
      Object {
        "root": Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                "backgroundColor: gray /*TestComponent.sheet.root*/",
              ],
            },
          ],
          "name": "root",
        },
      }
    }
    styleX={
      Object {
        "list": Array [
          Object {
            "atomicArray": Array [
              "margin: 10 /*styleX*/",
            ],
          },
        ],
        "name": ".",
      }
    }
  >
    <ReactAny
      style={
        Object {
          "backgroundColor": "gray",
          "margin": 10,
          "padding": 10,
        }
      }
      trace={
        Object {
          "backgroundColor": "gray /*TestComponent.sheet.root*/",
          "margin": "10 /*styleX*/",
          "padding": "10 /*classNameX*/",
        }
      }
    >
      traceLevel=4
    </ReactAny>
  </TestComponentCode>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 4 WEB 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": "10px",
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <TestComponentCode
    classNameX={
      Object {
        "list": Array [
          Object {
            "atomicArray": Array [
              ".b { padding:10px /*classNameX*/ }",
            ],
          },
        ],
        "name": ".",
      }
    }
    classes={
      Object {
        "root": Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                ".a { background-color:gray /*TestComponent.sheet.root*/ }",
              ],
            },
          ],
          "name": "root",
        },
      }
    }
    styleX={
      Object {
        "margin": 10,
      }
    }
  >
    <ReactAny
      className="b a"
      style={
        Object {
          "margin": 10,
        }
      }
      trace={
        Array [
          ".b { padding:10px /*classNameX*/ }",
          ".a { background-color:gray /*TestComponent.sheet.root*/ }",
        ]
      }
    >
      traceLevel=4
    </ReactAny>
  </TestComponentCode>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 5 NATIVE 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": 10,
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <TestComponentCode
    classNameX={
      Object {
        "list": Array [
          Object {
            "atomicArray": Array [
              "padding: 10 /*classNameX*/",
            ],
          },
        ],
        "name": ".",
      }
    }
    classes={
      Object {
        "root": Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                "backgroundColor: gray /*TestComponent.sheet.root*/",
              ],
            },
          ],
          "name": "root",
        },
      }
    }
    styleX={
      Object {
        "list": Array [
          Object {
            "atomicArray": Array [
              "margin: 10 /*styleX*/",
            ],
          },
        ],
        "name": ".",
      }
    }
  >
    <ReactAny
      style={
        Object {
          "backgroundColor": "gray",
          "margin": 10,
          "padding": 10,
        }
      }
      trace={
        Object {
          "backgroundColor": "gray /*TestComponent.sheet.root*/",
          "margin": "10 /*styleX*/",
          "padding": "10 /*classNameX*/",
        }
      }
    >
      traceLevel=5
    </ReactAny>
  </TestComponentCode>
</TestComponent>
`;

exports[`WITH STYLES TRACE LEVELS trace 5 WEB 1`] = `
<TestComponent
  classNameX={
    Object {
      "padding": "10px",
    }
  }
  styleX={
    Object {
      "margin": 10,
    }
  }
>
  <TestComponentCode
    classNameX={
      Object {
        "list": Array [
          Object {
            "atomicArray": Array [
              ".b { padding:10px /*classNameX*/ }",
            ],
          },
        ],
        "name": ".",
      }
    }
    classes={
      Object {
        "root": Object {
          "list": Array [
            Object {
              "atomicArray": Array [
                ".a { background-color:gray /*TestComponent.sheet.root*/ }",
              ],
            },
          ],
          "name": "root",
        },
      }
    }
    styleX={
      Object {
        "margin": 10,
      }
    }
  >
    <ReactAny
      className="b a"
      style={
        Object {
          "margin": 10,
        }
      }
      trace={
        Array [
          ".b { padding:10px /*classNameX*/ }",
          ".a { background-color:gray /*TestComponent.sheet.root*/ }",
        ]
      }
    >
      traceLevel=5
    </ReactAny>
  </TestComponentCode>
</TestComponent>
`;
